testdata/baselines/reference/submodule/compiler/declarationFileNoCrashOnExtraExportModifier.errors.txt
input.ts(1,1): error TS2309: An export assignment cannot be used in a module with other exported elements.


==== input.ts (1 errors) ====
    export = exports;
    ~~~~~~~~~~~~~~~~~
!!! error TS2309: An export assignment cannot be used in a module with other exported elements.
    declare class exports {
        constructor(p: number);
        t: number;
    }
    export class Sub {
        instance!: {
            t: number;
        };
    }
    declare namespace exports {
        export { Sub };
    }